feat: add gateway token auth and config UX
Add a local gateway auth token so Codex can authenticate to the localhost gateway (token lives in user-data/secrets.json). Prevent forwarding the local token upstream and keep provider keys separate. Improve UI config/routing ergonomics (toast notifications, auto-apply routing, conditional Save button for base_url edits). Keep local state next to the EXE under user-data/; keep secrets/binaries gitignored.

Verification: npm run build; cargo check (src-tauri)

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,7 @@ dist-ssr
 src-tauri/target
 
 # Local state (never commit keys or logs)
-config.toml
-data/
-_trash_from_xauusd/
+user-data/
 
 # Local convenience launcher (built binary, never commit)
 Agent Orchestrator.exe
