feat: add quota refresh (ppchat/packycode) with low-frequency scheduler

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,8 @@ futures-util = "0.3"
 async-stream = "0.3"
 bytes = "1"
 image = { version = "0.25", default-features = false, features = ["png"] }
+urlencoding = "2"
+fastrand = "2"
 
 [dev-dependencies]
 tempfile = "3"
