--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ user-data/
 # Local convenience launcher (built binary, never commit)
 Agent Orchestrator.exe
 
+# Local research / temporary clones (never commit)
+packycode-cost/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
