--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,53 @@ permissions:
   contents: read
 
 jobs:
-  check:
+  pr_gate:
+    name: PR Gate
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    runs-on: ubuntu-latest
+    steps:
+      - name: PR Gate no-op
+        run: echo "PR Gate (event=${{ github.event_name }}, action=${{ github.event.action }})"
+
+  changes:
+    needs: pr_gate
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    runs-on: ubuntu-latest
+    outputs:
+      run_ci: ${{ steps.filter.outputs.run_ci }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Detect relevant changes
+        id: filter
+        run: |
+          if [ "${{ github.event_name }}" != 'pull_request' ]; then
+            echo "run_ci=true" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          BASE_SHA='${{ github.event.pull_request.base.sha }}'
+          HEAD_SHA='${{ github.event.pull_request.head.sha }}'
+
+          git fetch --no-tags --prune --depth=2 origin "$BASE_SHA"
+          CHANGED_FILES=$(git diff --name-only "$BASE_SHA" "$HEAD_SHA")
+
+          run_ci=false
+          for file in $CHANGED_FILES; do
+            case "$file" in
+              .github/*|.github/**|src-tauri/*|src-tauri/**|src/*|src/**|package.json|package-lock.json)
+                run_ci=true
+                break
+                ;;
+            esac
+          done
+
+          echo "run_ci=$run_ci" >> "$GITHUB_OUTPUT"
+
+  lint:
+    needs: changes
+    if: needs.changes.outputs.run_ci == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -39,6 +85,11 @@ jobs:
       - name: Rust clippy
         run: cargo clippy --manifest-path src-tauri/Cargo.toml -- -D warnings
 
+  test:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
       - name: Rust tests
         run: cargo test --manifest-path src-tauri/Cargo.toml --locked
-
