--- a/mcp/Cargo.toml
+++ b/mcp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "agent_orchestrator_mcp"
+name = "api_router_mcp"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
