feat: Add provider management and intelligent routing (#1)
* ui: icon-aligned theme, larger default window, add AGENTS/QWEN

* ui: light theme + events scroll; app: single-instance focus

* ui: increase light-theme contrast

* ui: hide main scrollbar, redesign events scrollbar, custom title bar

* ui: keep native title bar with mica; hide main scrollbar

* ui: reduce white flash; fix pill text centering; revert mica

* ui: remove chat capability + custom set-key modal; backend: responses-only + unknown health

* ui: pulse running/auto pills; rename capabilities header

* feat: add gateway token auth and config UX

Add a local gateway auth token so Codex can authenticate to the localhost gateway (token lives in user-data/secrets.json). Prevent forwarding the local token upstream and keep provider keys separate. Improve UI config/routing ergonomics (toast notifications, auto-apply routing, conditional Save button for base_url edits). Keep local state next to the EXE under user-data/; keep secrets/binaries gitignored.

Verification: npm run build; cargo check (src-tauri)

* feat: add quota refresh (ppchat/packycode) with low-frequency scheduler

* chore: rustfmt + update cargo lock

* fix: auto-derive usage endpoints from base_url (no hardcoded domains)

* chore: generic usage adapters + CI + tests

* feat: configurable usage base url (domain-agnostic)

* ci: add pr_gate + changes jobs

* ci: install linux deps for tauri builds

* feat: add minimal MCP server (stdio)

* ci: fix linux deps for rust tests; docs: tighten readme; mcp: lockfile

* feat: official web status + remaining (best-effort)

* fix: improve usage 404 guidance

* fix: widen layout + add official web close + clarify usage base

* fix: make official web window closable (hide on close)

* fix(ui): refine layout and codex auth UI

Rework provider config layout and usage controls spacing.
Add Codex auth limits display adjustments and dev-safe mocks.

* fix(ui): remove tokens column and gate mocks

Use dev 

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "agent_orchestrator"
+name = "api_router"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -23,10 +23,11 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.9.5", features = ["tray-icon"] }
 tauri-plugin-log = "2"
+tauri-plugin-single-instance = "2"
 axum = "0.7"
 http = "1"
 hyper = { version = "1", features = ["http1", "server"] }
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
+tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
 tower = "0.5"
 reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
 uuid = { version = "1", features = ["v4"] }
@@ -38,8 +39,10 @@ anyhow = "1"
 futures-util = "0.3"
 async-stream = "0.3"
 bytes = "1"
-keyring = { version = "3", features = ["windows-native"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
+urlencoding = "2"
+fastrand = "2"
+open = "5"
 
 [dev-dependencies]
 tempfile = "3"
