--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,16 @@ dist-ssr
 src-tauri/target
 
 # Local state (never commit keys or logs)
-config.toml
-data/
-_trash_from_xauusd/
+user-data/
 
 # Local convenience launcher (built binary, never commit)
 Agent Orchestrator.exe
+
+# Local research / temporary clones (never commit)
+packycode-cost/
+
+# MCP build artifacts
+mcp/target/
 
 # Editor directories and files
 .vscode/*
