--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs"
+    "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
@@ -16,7 +17,8 @@
     "@tauri-apps/cli": "^2.9.6",
     "@vitejs/plugin-react": "^4.7.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^2.1.9"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
