fix(ci): make ui:tauri optional off Windows
Skip Windows-only tauri ui-check when running build:root-exe:checked on non-win32, and cancel drag listeners when the config modal closes.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tauri": "tauri",
     "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs",
     "ui:tauri": "node scripts/tauri-ui-check.mjs",
-    "build:root-exe:checked": "npm run ui:tauri && npm run build:root-exe",
+    "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
     "test": "vitest run"
   },
   "devDependencies": {
