--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs",
+    "ui:tauri": "node scripts/tauri-ui-check.mjs",
+    "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
     "test": "vitest run"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.9.6",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
-    "@tauri-apps/cli": "^2.9.6",
     "@vitejs/plugin-react": "^4.7.0",
+    "chai": "^6.2.2",
+    "mocha": "^11.7.5",
+    "pngjs": "^7.0.0",
+    "selenium-webdriver": "^4.40.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vitest": "^2.1.9"
