feat: auto-detect WT_SESSION

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,5 +44,14 @@ urlencoding = "2"
 fastrand = "2"
 open = "5"
 
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.52", features = [
+  "Win32_Foundation",
+  "Win32_NetworkManagement_IpHelper",
+  "Win32_Networking_WinSock",
+  "Win32_System_Diagnostics_Debug",
+  "Win32_System_Threading",
+] }
+
 [dev-dependencies]
 tempfile = "3"
