--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,8 +3,8 @@ name = "api_router"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
-license = ""
-repository = ""
+license = "MIT"
+repository = "https://github.com/yiyousiow000814/API-Router"
 edition = "2021"
 rust-version = "1.77.2"
 
