feat: extend MCP session tools

--- a/mcp/Cargo.toml
+++ b/mcp/Cargo.toml
@@ -2,7 +2,8 @@
 name = "api_router_mcp"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MIT"
+repository = "https://github.com/yiyousiow000814/API-Router"
 
 [dependencies]
 anyhow = "1"
