feat: usage quota and pricing UI
Adds quota probing + normalization in the orchestrator and a UI surface for usage statistics / pricing. Includes a helper script to auto-open the built root exe on Windows.

Verify: npm test; npm run build; (cd src-tauri; cargo fmt --check); (cd src-tauri; cargo test)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs",
+    "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs && node scripts/open-root-exe.mjs",
     "ui:tauri": "node scripts/tauri-ui-check.mjs",
     "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
     "test": "vitest run"
