fix: isolate ui check runtime
Add unified check scripts and expand Tauri UI checks to cover main pages and key modals.

Run ui-check in an isolated profile and bypass single-instance plus gateway startup in UI automation mode, so checks no longer disrupt a running app instance.

Verification: npm run check:all

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "tauri": "tauri",
     "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs && node scripts/open-root-exe.mjs",
     "ui:tauri": "node scripts/tauri-ui-check.mjs",
+    "ui:check": "node scripts/run-ui-tauri-if-windows.mjs",
+    "backend:check": "cargo test --manifest-path src-tauri/Cargo.toml --locked",
+    "check:all": "npm run test && npm run backend:check && npm run ui:check",
     "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
     "test": "vitest run"
   },
