--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.24",
     "chai": "^6.2.2",
     "mocha": "^11.7.5",
     "pngjs": "^7.0.0",
+    "postcss": "^8.5.6",
     "selenium-webdriver": "^4.40.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vitest": "^2.1.9"
