--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ user-data/
 # Local convenience launcher (built binary, never commit)
 Agent Orchestrator.exe
 API Router.exe
+API Router [[]TEST[]].exe
 
 # Local research / temporary clones (never commit)
 packycode-cost/
