--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "node scripts/check-gateway-provider-id.mjs && tsc && vite build",
+    "check:gateway-provider-id": "node scripts/check-gateway-provider-id.mjs",
+    "dev": "npm run check:gateway-provider-id && vite",
+    "build": "npm run check:gateway-provider-id && tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
     "build:root-exe": "tauri build && node scripts/copy-root-exe.mjs && node scripts/open-root-exe.mjs",
@@ -15,7 +16,7 @@
     "backend:check": "cargo test --manifest-path src-tauri/Cargo.toml --locked",
     "check:all": "npm run test && npm run backend:check && npm run ui:check",
     "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
-    "test": "vitest run"
+    "test": "npm run check:gateway-provider-id && vitest run"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.9.6",
