chore: enforce LF line ending policy
Define LF as the repository standard and wire it into docs and CI checks.
Allow CRLF only for Windows script files.

- Add .gitattributes and .editorconfig line-ending rules.
- Add check-line-endings script and run it in build/check-all.
- Run LF policy check in CI lint job.
- Document LF policy in AGENTS and commit workflow skill.

Verify: npm run check:line-endings; npm run build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,9 @@ jobs:
       - name: Node install
         run: npm ci
 
+      - name: Line endings (LF policy)
+        run: npm run check:line-endings
+
       - name: Web build
         run: npm run build
 
