--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           run_ci=false
           for file in $CHANGED_FILES; do
             case "$file" in
-              .github/*|.github/**|src-tauri/*|src-tauri/**|src/*|src/**|package.json|package-lock.json)
+              .github/*|.github/**|scripts/*|scripts/**|src-tauri/*|src-tauri/**|src/*|src/**|package.json|package-lock.json|.gitattributes|.editorconfig)
                 run_ci=true
                 break
                 ;;
@@ -82,9 +82,6 @@ jobs:
 
       - name: Node install
         run: npm ci
-
-      - name: Line endings (LF policy)
-        run: npm run check:line-endings
 
       - name: Web build
         run: npm run build
