chore: enforce LF line ending policy (#87)
* chore: enforce LF line ending policy

Define LF as the repository standard and wire it into docs and CI checks.
Allow CRLF only for Windows script files.

- Add .gitattributes and .editorconfig line-ending rules.
- Add check-line-endings script and run it in build/check-all.
- Run LF policy check in CI lint job.
- Document LF policy in AGENTS and commit workflow skill.

Verify: npm run check:line-endings; npm run build

* chore: fix line-ending check in CI

Ensure LF enforcement can resolve origin/main in CI and fail loudly if
changed-file detection cannot be established.

* chore: tighten CI triggers for line-ending policy

- Include scripts and line-ending config files in changes filter.
- Remove duplicate line-ending check step in CI lint job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           run_ci=false
           for file in $CHANGED_FILES; do
             case "$file" in
-              .github/*|.github/**|src-tauri/*|src-tauri/**|src/*|src/**|package.json|package-lock.json)
+              .github/*|.github/**|scripts/*|scripts/**|src-tauri/*|src-tauri/**|src/*|src/**|package.json|package-lock.json|.gitattributes|.editorconfig)
                 run_ci=true
                 break
                 ;;
@@ -63,6 +63,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-node@v4
         with:
