feat(event-log): migrate storage to sqlite
Move event write/read and daily aggregates from sled keys to embedded SQLite with indexes for long-term query performance.

Add one-time migration from legacy sled event keys and keep usage/spend data on sled.

Verification: npm run check:line-endings; npm run build; cargo test --manifest-path src-tauri/Cargo.toml store::tests; cargo test --manifest-path src-tauri/Cargo.toml append_backup_event_daily_stats

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,7 @@ urlencoding = "2"
 fastrand = "2"
 open = "5"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+rusqlite = { version = "0.32", features = ["bundled"] }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.52", features = [
