--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "check:ci-local": "npm run build && cargo fmt --manifest-path src-tauri/Cargo.toml --check && cargo clippy --manifest-path src-tauri/Cargo.toml -- -D warnings && cargo test --manifest-path src-tauri/Cargo.toml --locked",
     "check:all": "npm run test && npm run check:line-endings && npm run backend:check && npm run ui:check",
     "build:root-exe:checked": "node scripts/run-ui-tauri-if-windows.mjs && npm run build:root-exe",
+    "ui:e2e:requests-reload": "node scripts/tauri-e2e-requests-reload.mjs",
+    "ui:e2e:requests-graph-hydration": "node scripts/tauri-e2e-requests-graph-hydration.mjs",
     "test": "npm run check:gateway-provider-id && vitest run"
   },
   "devDependencies": {
